[gd_scene load_steps=26 format=3 uid="uid://ce86j4ish3v8d"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_8c68d"]
[ext_resource type="Script" path="res://stages/main_stage/main_stage.gd" id="2_dqif6"]
[ext_resource type="PackedScene" uid="uid://bq86r4yll8po" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_fullglove_low.tscn" id="2_wdn7x"]
[ext_resource type="Material" uid="uid://f2uhcqq8s2jx" path="res://addons/godot-xr-tools/hands/materials/glove_caucasian_green_camo.tres" id="3_7p8ki"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="4_agslu"]
[ext_resource type="PackedScene" uid="uid://xqimcf20s2jp" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_fullglove_low.tscn" id="4_aydn7"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="5_547ox"]
[ext_resource type="Material" uid="uid://608sick1vff1" path="res://assets/wahooney.itch.io/green_grid.tres" id="5_wa76u"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="7_7yy6x"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="8_qc87i"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="9_fkgvm"]
[ext_resource type="PackedScene" uid="uid://3j1qg4t2khnj" path="res://objects/Table.tscn" id="11_diy2t"]
[ext_resource type="PackedScene" uid="uid://bnedv0u7ue2ps" path="res://objects/part2/Cube.tscn" id="12_5y80o"]
[ext_resource type="PackedScene" uid="uid://3fdd57dg8gjc" path="res://objects/part3/Axe.tscn" id="13_1evnx"]
[ext_resource type="PackedScene" uid="uid://chbilnhk7cnwi" path="res://objects/part3/Screwdriver.tscn" id="13_dqoge"]
[ext_resource type="PackedScene" uid="uid://ohip0ds2n7c6" path="res://objects/part3/ToolBoard.tscn" id="14_fuvie"]
[ext_resource type="PackedScene" uid="uid://i3g1e1jctafb" path="res://objects/part4/Gun.tscn" id="16_hmf4g"]
[ext_resource type="PackedScene" uid="uid://cwqm3qakth8jx" path="res://objects/part4/Magazine.tscn" id="17_lgpq4"]
[ext_resource type="PackedScene" uid="uid://cpaimgj2a1fde" path="res://objects/livestream-bow/Bow.tscn" id="18_ljdke"]
[ext_resource type="PackedScene" uid="uid://crrj0l5nbc0up" path="res://objects/livestream-bow/Arrow.tscn" id="19_04j44"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3uudh"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_wwrjb"]
sky_material = SubResource("ProceduralSkyMaterial_3uudh")

[sub_resource type="Environment" id="Environment_rvaeb"]
background_mode = 2
sky = SubResource("Sky_wwrjb")
tonemap_mode = 2

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_y31i3"]

[sub_resource type="PlaneMesh" id="PlaneMesh_jjsd5"]
size = Vector2(1000, 1000)

[node name="MainStage" instance=ExtResource("1_8c68d")]
script = ExtResource("2_dqif6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="0"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, -0.216713, 0.775661, 0.592778, -0.450598, 0.459182, -0.76558, 0, 1.25712, 0)
shadow_enabled = true
directional_shadow_max_distance = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="1"]
environment = SubResource("Environment_rvaeb")

[node name="LeftHand" parent="XROrigin3D/LeftHand" index="0" instance=ExtResource("2_wdn7x")]
hand_material_override = ExtResource("3_7p8ki")

[node name="FunctionTeleport" parent="XROrigin3D/LeftHand" index="1" instance=ExtResource("4_agslu")]

[node name="FunctionPickup" parent="XROrigin3D/LeftHand" index="2" instance=ExtResource("5_547ox")]
grab_collision_mask = 328708

[node name="RightHand" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("4_aydn7")]
hand_material_override = ExtResource("3_7p8ki")

[node name="MovementDirect" parent="XROrigin3D/RightHand" index="1" instance=ExtResource("7_7yy6x")]

[node name="MovementTurn" parent="XROrigin3D/RightHand" index="2" instance=ExtResource("8_qc87i")]

[node name="FunctionPickup" parent="XROrigin3D/RightHand" index="3" instance=ExtResource("5_547ox")]
grab_collision_mask = 328708

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("9_fkgvm")]
player_radius = 0.02

[node name="Floor" type="StaticBody3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor" index="0"]
shape = SubResource("WorldBoundaryShape3D_y31i3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor" index="1"]
material_override = ExtResource("5_wa76u")
mesh = SubResource("PlaneMesh_jjsd5")

[node name="Tables" type="Node3D" parent="." index="4"]

[node name="Table01" parent="Tables" index="0" instance=ExtResource("11_diy2t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -2)

[node name="Cube01" parent="Tables/Table01" index="2" instance=ExtResource("12_5y80o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -0.278)

[node name="Cube02" parent="Tables/Table01" index="3" instance=ExtResource("12_5y80o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18, 1.2, -0.278)

[node name="Cube03" parent="Tables/Table01" index="4" instance=ExtResource("12_5y80o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.315, 1.2, -0.278)

[node name="Cube04" parent="Tables/Table01" index="5" instance=ExtResource("12_5y80o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.26, 1.3, -0.278)

[node name="Table02" parent="Tables" index="1" instance=ExtResource("11_diy2t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.5, 0, -2)

[node name="Screwdriver01" parent="Tables/Table02" index="2" instance=ExtResource("13_dqoge")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.085119, 1.12513, -0.355392)

[node name="Screwdriver02" parent="Tables/Table02" index="3" instance=ExtResource("13_dqoge")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0252771, 1.12513, -0.355392)

[node name="Screwdriver03" parent="Tables/Table02" index="4" instance=ExtResource("13_dqoge")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.0315859, 1.12513, -0.355392)

[node name="Axe" parent="Tables/Table02" index="5" instance=ExtResource("13_1evnx")]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0.261823, 1.12162, 0)

[node name="ToolBoard" parent="Tables/Table02" index="6" instance=ExtResource("14_fuvie")]
transform = Transform3D(-0.870519, 0, 0.492135, 0, 1, 0, -0.492135, 0, -0.870519, -0.170453, 1.06182, -0.131735)

[node name="Table03" parent="Tables" index="2" instance=ExtResource("11_diy2t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.5, 0, -2)

[node name="Gun" parent="Tables/Table03" index="2" instance=ExtResource("16_hmf4g")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 1.14198, -0.284923)

[node name="Magazine01" parent="Tables/Table03" index="3" instance=ExtResource("17_lgpq4")]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0.272008, 1.1228, -0.29657)

[node name="Magazine02" parent="Tables/Table03" index="4" instance=ExtResource("17_lgpq4")]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0.347967, 1.1228, -0.29657)

[node name="Magazine03" parent="Tables/Table03" index="5" instance=ExtResource("17_lgpq4")]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0.427316, 1.1228, -0.29657)

[node name="Magazine04" parent="Tables/Table03" index="6" instance=ExtResource("17_lgpq4")]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0.507629, 1.1228, -0.29657)

[node name="Table04" parent="Tables" index="3" instance=ExtResource("11_diy2t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.5, 0, -2)

[node name="Bow" parent="Tables/Table04" index="2" instance=ExtResource("18_ljdke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304744, 1.23436, 0)

[node name="Arrow01" parent="Tables/Table04" index="3" instance=ExtResource("19_04j44")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.15021, -0.14797)

[node name="Arrow02" parent="Tables/Table04" index="4" instance=ExtResource("19_04j44")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0828803, 1.15021, -0.14797)

[node name="Arrow03" parent="Tables/Table04" index="5" instance=ExtResource("19_04j44")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.153198, 1.15021, -0.14797)

[node name="Arrow04" parent="Tables/Table04" index="6" instance=ExtResource("19_04j44")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.229579, 1.15021, -0.14797)
